--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "biblioteca"
+name = "librero"
 version = "0.1.0"
 edition = "2024"
+license = "GPL-3.0"
+authors = ["Facundo Alejandro Caniza"]
+description = "Sistema de gestión de préstamos de libros"
+
+
 
 [dependencies]
 chrono = {version="0.4.42", features = ["serde"]}
