--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ description = "Sistema de gestión de préstamos de libros"
 chrono = {version="0.4.42", features = ["serde"]}
 clap = {version = "4.5.53", features = ["derive"]}
 colored = "3.0.0"
+pretty_assertions = "1.4.1"
+rstest = "0.26.1"
 serde = {version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.147"
 uuid = {version = "1.19.0", features = ["serde", "v4"]}
